--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,3 +7,7 @@ h1{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: red;
 }
+li {
+    list-style-type: none;
+    display: inline;
+}
