--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@ header {
     background: plum;
     width: 100%;
 }
-#Dans_bio-image {
+#bio-image {
   max-height: 400px;
   width: 200px;
   clip-path: circle();
@@ -11,19 +11,26 @@ header {
   shape-outside: circle(50%);
   margin-right: 0.5rem;
 }
+#container {
+ min-height: 1000px;
+}
 
 p{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 30px;
+    font-size: 20px;
     color: royalblue;
-    text-align: center;
+    text-align: left;
+    padding: 10px;
 }
 h1{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: red;
+    text-align: center;
+
 }
 h2{
-    text-align: center;
+    text-align: left;
+    padding-left: 10px;
 }
 header h1, header ul {
     text-align: center;
@@ -38,8 +45,39 @@ li {
 .person {
     background: plum;
     margin: 75px 10px;
-    height: 300px;
-    padding: 10px;
+    height: 500px;
     overflow-x: hidden;
     overflow-y: auto;
 }
+#contact-info{
+    text-align: center;
+}
+h3{
+    text-align: center;
+}
+
+#navbar {
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  #navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+#navbar a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+#navbar a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
+  
